fix(grid): Improve Grid popup editor checkbox alignment

--- a/packages/default/scss/edit-form/_layout.scss
+++ b/packages/default/scss/edit-form/_layout.scss
@@ -93,7 +93,7 @@
         }
 
         .k-checkbox-label {
-            margin-top: $input-padding-y;
+            margin-top: add-two($input-padding-y, $input-border-width);
         }
 
         .k-reset > li + li {
